<resources>
    <string name="app_name">Streaming Service Search</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="i_know_what_i_want">I Know What I Want</string>
    <string name="i_d_like_suggestions">I\'d Like Suggestions</string>
    <string name="random">Random</string>
    <string name="history">History</string>
    <string name="streaming_search">Streaming Search</string>

    <!-- Strings related to search -->
    <string name="search_results_text">Movie Title</string>
    <string name="search_button_text">Search</string>
    <string name="watchlist">Watchlist</string>
    <string name="historytext">History</string>

</resources>