<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_homepage_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".Homepage">

    <TextView

        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textStyle="bold"
        android:text="@string/streaming_search"
        android:textSize="44sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/search_button_home"
        android:layout_width="400sp"
        android:layout_height="120sp"
        android:layout_marginTop="6dp"
        android:gravity="center"
        android:text="@string/i_know_what_i_want"
        android:textSize="27sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/suggestion_button"
        android:layout_width="400sp"
        android:layout_height="120sp"
        android:layout_marginTop="6dp"
        android:text="@string/i_d_like_suggestions"
        android:textSize="27sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_button_home" />

    <Button
        android:id="@+id/random_button"
        android:layout_width="400sp"
        android:layout_height="120sp"
        android:layout_marginTop="6dp"
        android:gravity="center"
        android:text="@string/random"
        android:textSize="27sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/suggestion_button" />

    <Button
        android:id="@+id/history_button"
        android:layout_width="400sp"
        android:layout_height="120sp"
        android:layout_marginTop="6dp"
        android:gravity="center"
        android:text="@string/history"
        android:textSize="27sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/random_button" />
</androidx.constraintlayout.widget.ConstraintLayout>